# milkdrop

./: README.md  build.sh  plan.md
code/: CMakeLists.txt  wdltypes.h
code/ns-eel2/: CMakeLists.txt
code/resources/Milkdrop2/data/: blur1_ps.glsl  blur2_ps.glsl  blur_vs.glsl  comp_ps.glsl  comp_vs.glsl  include.glsl  warp_ps.glsl  warp_vs.glsl
code/vis_milk2/: CMakeLists.txt  Milkdrop2PcmVisualizer.cpp  audio_capture.cpp  audio_capture.h  dxcontext.h  glcontext.cpp  glcontext.h  glshader.cpp  glshader.h  main_linux.cpp  milkdrop_mesh.cpp  milkdrop_mesh.h  milkdrop_renderer.cpp  milkdrop_renderer.h  pluginshell.h  preset_engine.cpp  preset_engine.h  shell_defines.h  state.h  support.h  texmgr.h  textmgr.h  utility.h  wasabi.h
linux/: README.md
